tests/invalid/match_return_type_mismatch.wio
fn Entry() -> i32 {
    let value = match (1) {
        1: 10;
        assumed: "oops";
    };

    return 0;
}
